# mpc_node

./: .gitignore  Cargo.toml  README.md  run_signers.sh  vars.env
config/: sample.toml
src/: auth.rs  config.rs  lib.rs
src/common/: mod.rs  secp256k1def.rs  signing_room.rs  types.rs  utils.rs
src/error/: mod.rs  tss_error.rs
src/manager/: api.rs  constants.rs  handlers.rs  keygen.rs  mod.rs  registration.rs  service.rs
src/monitoring/: metrics.rs  mod.rs
src/queue/: mod.rs  rabbitmq.rs
src/signer/: hd_keys.rs  mod.rs  service.rs
src/storage/: mod.rs  mongodb.rs
tests/: manager_service_tests.rs
