[package]
name = "tss_network"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.5", default-features = false, features = [
    "async-std-runtime",
] }
lapin = "2.1"
futures = "0.3"
futures-lite = "1.13"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"
hex = "0.4"
sha2 = "0.9"
curv = { package = "curv-kzen", version = "0.9", default-features = false }
paillier = { package = "kzen-paillier", version = "0.4" }
multi-party-ecdsa = { git = "https://github.com/ZenGo-X/multi-party-ecdsa", branch = "master" }
reqwest = { version = "0.11.7", features = ["json", "blocking"] }
jsonwebtoken = "8.3"
metrics = "0.23.0"
metrics-exporter-prometheus = "0.11"
lazy_static = "1.4"
uuid = { version = "1.3", features = ["v4"] }
aes-gcm = "0.9.4"
zeroize = "1"
hmac = "0.11"
rand = "0.8.5"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "manager"
path = "src/bin/manager.rs"

[[bin]]
name = "signer"
path = "src/bin/signer.rs"

[lib]
name = "tss_network"
path = "src/lib.rs"
